[openrewrite] `StringRulesRecipes`